--- a/apps/govuk-account-manager-prototype.html
+++ b/apps/govuk-account-manager-prototype.html
@@ -352,7 +352,7 @@
 </div>          <div class="govuk-summary-list__row">
 
             <dt class="govuk-summary-list__key">Continuously deployed?</dt>
-            <dd class="govuk-summary-list__value">No</dd>
+            <dd class="govuk-summary-list__value">Yes</dd>
 
 
 
