--- a/document-types/flood_and_coastal_erosion_risk_management_research_report.html
+++ b/document-types/flood_and_coastal_erosion_risk_management_research_report.html
@@ -380,7 +380,7 @@ actually any pages with this document type.</p>
 <li><a href="https://www.gov.uk/flood-and-coastal-erosion-risk-management-research-reports/sand-dune-processes-and-management-for-flood-and-coastal-defence">Sand dune processes and management for flood and coastal defence</a></li>
 <li><a href="https://www.gov.uk/flood-and-coastal-erosion-risk-management-research-reports/achieving-net-zero-carbon-emissions-a-review-of-the-evidence-behind-carbon-offsetting">Achieving Net Zero carbon emissions: a review of the evidence behind carbon offsetting</a></li>
 <li><a href="https://www.gov.uk/flood-and-coastal-erosion-risk-management-research-reports/improving-capabilities-for-forecasting-surface-water-flooding">Developing and trialling improved capabilities for forecasting surface water flooding</a></li>
-<li><a href="https://www.gov.uk/flood-and-coastal-erosion-risk-management-research-reports/accounting-for-residual-uncertainty-an-update-to-the-fluvial-freeboard-guide">Accounting for residual uncertainty: an update to the fluvial freeboard guide</a></li>
+<li><a href="https://www.gov.uk/flood-and-coastal-erosion-risk-management-research-reports/update-to-the-suds-manual">Update to the SuDS Manual</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=flood_and_coastal_erosion_risk_management_research_report&amp;count=10">Source query from Search API</a></p>
 
