--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/171850.es-419">G8: Oportunidades para todos, incluyendo Honduras</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/279923.es">El Reino Unido acoge la Cumbre Mundial del Derecho – 23 a 25 de febrero</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-visa-application-centre-changes-location--2">UK Visa Application Centre changes location</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/186354.it">Il Regno Unito lancia un piano d&#39;azione per l&#39;impresa ed i diritti umani</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/220494.es-419">Medirán emisiones de metano con muestras tomadas en Chacaltaya</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/200799.fr">Accord avec EDF : un moment important pour nos deux pays</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/hms-protector-marks-centenary-of-the-rescue-of-the-crew-of-endurance">HMS PROTECTOR marks centenary of the rescue of the crew of ENDURANCE</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/vacancies-at-the-british-embassy-prague--2">Vacancies at the British Embassy Prague</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/british-expatriates-its-your-vote-dont-lose-it--4">British expatriates - “It’s your vote, don’t lose it”</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-goa--2">Advice for British nationals in Goa</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/fintech-week-2016-report-finds-britain-to-be-the-worlds-leading-fintech-centre">Fintech Week 2016: report finds Britain to be the world&rsquo;s leading FinTech centre</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/high-level-uk-ghana-partnership-to-boost-trade-and-jobs">High Level UK-Ghana partnership to boost trade and jobs</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/228522.es">David Muñoz y Simon Manley mano a mano en los fogones</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/192069.pt">Fórum atrai empresários interessados em parcerias em mega eventos</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/257525.ar">قام سفير صاحبة الجلالة البريطانية بإلقاء كلمة أمام خادم الحرمين الشريفين الملك عبد الله خلال حفل تقديم أوراق اعتماد السفراء الذي تم عقده في جدة</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/statement-from-the-british-ambassador-to-bahrain--2">Statement from the British Ambassador to Bahrain</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-update--6">Turks and Caicos post Cabinet Update</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
