--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -404,16 +404,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='imported-documents'>Imported documents</h2><h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.west-norfolk.gov.uk" class="govuk-link">King&rsquo;s Lynn and West Norfolk Borough Council</a></li>
-      <li><a href="http://www.telford.gov.uk" class="govuk-link">Telford &amp; Wrekin Council</a></li>
-      <li><a href="http://www.monmouthshire.gov.uk" class="govuk-link">Monmouthshire County Council</a></li>
+      <li><a href="http://www.nfdc.gov.uk" class="govuk-link">New Forest District Council</a></li>
+      <li><a href="http://www.york.gov.uk" class="govuk-link">York City Council</a></li>
+      <li><a href="http://www.aylesburyvaledc.gov.uk/" class="govuk-link">Aylesbury Vale District Council</a></li>
+      <li><a href="http://www.dundeecity.gov.uk" class="govuk-link">Dundee City Council</a></li>
+      <li><a href="https://getintoteaching.education.gov.uk/" class="govuk-link">Get Into Teaching</a></li>
+      <li><a href="http://www.maidstone.gov.uk/" class="govuk-link">Maidstone Borough Council</a></li>
       <li><a href="http://www.northdown.gov.uk" class="govuk-link">North Down Borough Council</a></li>
-      <li><a href="http://www.medway.gov.uk" class="govuk-link">Medway Council</a></li>
+      <li><a href="http://www.cotswold.gov.uk" class="govuk-link">Cotswold District Council</a></li>
       <li><a href="http://www.chiltern.gov.uk" class="govuk-link">Chiltern District Council</a></li>
-      <li><a href="http://www.crawley.gov.uk" class="govuk-link">Crawley Borough Council</a></li>
-      <li><a href="http://www.waverley.gov.uk/" class="govuk-link">Waverley Borough Council</a></li>
-      <li><a href="http://www.calderdale.gov.uk" class="govuk-link">Calderdale Metropolitan Borough Council</a></li>
-      <li><a href="http://www.thanet.gov.uk" class="govuk-link">Thanet District Council</a></li>
+      <li><a href="http://www.richmond.gov.uk/" class="govuk-link">London Borough of Richmond upon Thames Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
