--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/171667.pt">Desafio GREAT levará jovens jornalistas `a Londres</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/270679.pt">#TraintasticTales</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/--6">國家海洋安全戰略</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/un-human-rights-council-the-united-kingdoms-voluntary-pledges-and-commitments-on-human-rights-2013--2">UN Human Rights Council - The United Kingdom&rsquo;s Voluntary Pledges and Commitments on Human Rights 2013</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/royal-baby-pm-statement">Royal baby: PM statement</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/eu-member-states-embassies-mark-climate-change-day-in-tashkent">EU Member States’ embassies mark Climate Change Day in Tashkent</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-visa-applications-in-iceland--2">UK Visa Applications in Iceland</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/220494.es-419">Medirán emisiones de metano con muestras tomadas en Chacaltaya</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/207016.pt">Rede Britânica de Ciência e Inovação traz palestra do carro mais veloz do mundo a estudantes e professores do SENAI-SP</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/284721.es-419">British Council y Ministerio de Educación inician Escuela de Verano para capacitar a 400 profesores peruanos de inglés</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/fintech-week-2016-report-finds-britain-to-be-the-worlds-leading-fintech-centre">Fintech Week 2016: report finds Britain to be the world&rsquo;s leading FinTech centre</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/201030.it">Revisione Competenze UE: via alla terza fase della consultazione</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/201405.it">Insieme in Europa per la sicurezza energetica</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--20">Advice for British nationals in Kolkata</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-minister-impressed-with-sa-leg-of-bloodhound-education-project--2">British Minister impressed with SA leg of Bloodhound education project</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/209252.pt">Tecnologias para Grandes Eventos é tema de Seminário GREAT em SP</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/200799.fr">Accord avec EDF : un moment important pour nos deux pays</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/applications-for-the-uk-governments-chevening-scholarships-open--2">Applications for the UK Government’s Chevening Scholarships open</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/high-commissioners-blog">High Commissioner’s Blog</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/queen-elizabeth-land-commemorative-coins-released">Queen Elizabeth Land Commemorative Coins released</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
